fixed logo hover jump problem w/ css change

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,7 +55,7 @@ main {
 
 .game-pick-team-logo-btn {
   background-color: white;
-  border:           2px white solid;
+  border:           4px white solid;
   border-radius:    10px;
   box-shadow:       10px 10px 10px #888888;
 
@@ -64,7 +64,7 @@ main {
 }
 
 .game-pick-team-logo-btn:hover {
-  border: 4px #64B5F6 solid;
+  border: 4px #1976d2 solid;
 }
 
 .game-pick-team-logo-btn:active {
